<resources>
    <string name="app_name">Guess My Number</string>
    <string name="number_text">What Is You Number ?</string>
    <string name="Reset_button">RESET</string>
    <string name="str_arrow_down_desc">press arrow down</string>
    <string name="str_arrow_up_desc">press arrow up</string>
    <string name="str_success_desc">press app has guessed the number</string>
    <string name="str_question">Is your Number %d ?</string>
</resources>