<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/question_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/margin_sixteen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        tools:text="@string/number_text" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/text_size_35sp"
        android:visibility="invisible"
        tools:text="Your Number Is 5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reset_button"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_32">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_circle_blue"
            android:contentDescription="@string/str_arrow_up_desc"
            android:onClick="clickDownwardArrow"
            app:srcCompat="@drawable/ic_baseline_arrow_downward_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_circle_pink"
            android:contentDescription="@string/str_success_desc"
            android:onClick="clickSuccess"
            app:srcCompat="@drawable/ic_baseline_check_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background_circle_blue"
            android:contentDescription="@string/str_arrow_down_desc"
            android:onClick="clickUpwardArrow"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />

    </RelativeLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_sixteen"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="@color/purple_200"
        android:onClick="clickReset"
        android:text="@string/Reset_button" />

</RelativeLayout>